fixed static files

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,11 +8,14 @@
   <title>{% block title %}Denas Power{% endblock %}</title>
 
   {% block css %}
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <link href="{% static 'css/style.css' %}" rel="stylesheet" />
   {% endblock %}
 
   {% block custom_css %}
+      <link href="{% static 'css/style.css' %}" rel="stylesheet" />
   {% endblock %}
+    <link href="{% static 'css/style.css' %}" rel="stylesheet" />
 </head>
 <body>
 
@@ -25,8 +28,8 @@
       </button>
 
         {% if request.user.is_admin %}
-            <div class="col-md-3">
-                <a class="text-gray-500 hover:text-blue-500 " href="{% url 'user-create' %}">
+            <div>
+                <a class="test" href="{% url 'user-create' %}">
                     Create user
                 </a>
             </div>
