--- a/users/templates/users/user_list.html
+++ b/users/templates/users/user_list.html
@@ -11,6 +11,8 @@
                 <th scope="col">Username</th>
                 <th scope="col">Email</th>
                 <th scope="col">Telefon</th>
+                <th id="veprimi" scope="col" class="padding">Veprimi</th>
+
             </tr>
         </thead>
         <tbody>
